--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 body {
     height: 100vh;
     width: 100vw;
+    font-family: "Raleway";
+    background-color: #F4EEDD;
+    margin: 0 auto;
 }
 
 header {
@@ -12,33 +15,97 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 40px;
-    font-family: "Raleway";
+}
+
+img {
+    background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2015/12/05/849914/efe3db6879eac718e41747fa36c2ea4d-1000.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    left: 0;
+    height: 45vh;
+    width: 30vw;
 }
 
 main {
     height: 90vh;
-    width: 100vw;
+    width: 70vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-
+    justify-content: space-between;
+    padding-left: 30vw;
 }
-
-.list {
+.column {
     width: 25vw;
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.title {
+    height: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.list {
+    height: 80vh;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
-    font-size: 24px;
-    background-color: aqua;
+    font-size: 20px;
+    border: 1px solid black;
+    
+}
+
+#addedList {
+    justify-content: flex-start;
+}
+
+.place {
+    width: 10vw;
+
+}
+
+.place:hover {
+    color: blue;
 }
 
 .row {
     width: 16vw;
+    height: 4vh;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.x {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.x:hover{
+    color: red;
+}
+
+.buttons {
+    margin-left: 20px;
+    font-size: 16px;
     background-color: green;
+    color: aqua;
+}
+
+.buttons:hover {
+    background-color: aqua;
+    color: green;
+}
+
+.inputBar {
+    width: 20px;
 }
