--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@ main {
 }
 .column {
     width: 25vw;
-    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,24 +50,18 @@ main {
 }
 
 .list {
-    height: 80vh;
+    height: 150vh;
     width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    font-size: 20px;
-    border: 1px solid black;
-    
-}
-
-#addedList {
     justify-content: flex-start;
+    font-size: 16px;
+    border-left: 1px solid black;
 }
 
 .place {
     width: 10vw;
-
 }
 
 .place:hover {
@@ -83,7 +76,6 @@ main {
     justify-content: center;
     align-items: center;
 }
-
 
 .x {
     margin-left: 20px;
@@ -106,8 +98,27 @@ main {
     color: green;
 }
 
-.inputBar {
-    width: 20px;
+.visitedInputBar {
+    width: 40px;
+}
+
+.listInputBar {
+    width: 500px;
+    top: 65vh;
+    left: 30px;
+    position: absolute;
+}
+
+#addButton {
+    top: 60vh;
+    left: 0;
+    position: absolute;
+}
+
+#saveButton {
+    top: 65vh;
+    left: 550px;
+    position: absolute;
 }
 
 hr {
